2012-12-19 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* extensions/module_groups.php: Fixed view, colors in cells were
	bad printed and alert popup also had sql errors.
	
	Merged from branches.

2012-12-19  Hirofumi Kosaka  <kosaka@rworks.jp>

	* include/functions_api.php: Added function
	'api_get_pandora_servers'.

        * include/functions_servers.php: Fixed a type.

2012-12-18 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_reporting.php
	include/functions_reports.php
	extensions/resource_registration.php
	extensions/resource_exportation.php
	operation/reporting/reporting_xml.php
	godmode/reporting/reporting_builder.list_items.php
	godmode/reporting/reporting_builder.php
	godmode/reporting/reporting_builder.item_editor.php: Fixed report
	templates.

2012-12-18 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_config.php: fixed check if it set the id_user
	in the session.



2012-12-18  Sergio Martin <sergio.martin@artica.es>

	* operation/events/events_list.php
	godmode/events/custom_events.php: Fixed
	a couple of bugs of style and event viewer
	normal

2012-12-18 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_reporting.php: Resize URL item report to make it
	taller.
	
	Merged from branches.

2012-12-18  Sergio Martin <sergio.martin@artica.es>

	* include/ajax/events.php
	include/functions_graph.php
	include/functions_events.php
	include/javascript/pandora_events.js
	operation/events/events_list.php
	operation/events/events.php
	godmode/events/custom_events.php
	godmode/events/events.php: Add compatibility 
	with metaconsole in the event viewer

2012-12-18  Hirofumi Kosaka  <kosaka@rworks.jp>

        * include/functions_events.php: Fixed a typo (have a small
          meaning for localization). Merged from branch 4.x

2012-12-17 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/alerts/alert_list.php,
	godmode/alerts/configure_alert_template.php,
	godmode/alerts/alert_templates.php,